--- a/next-docs/tsconfig.json
+++ b/next-docs/tsconfig.json
@@ -13,22 +13,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "target": "es5",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+    "incremental": true
   },
   "paths": {
     "@heathmont/moon-*": ["./packages/*/lib", "./next-docs"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "utils/analyzer.js",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/analyzer.js"],
   "exclude": ["node_modules"]
 }
