--- a/workspaces/base/tsconfig.esm.json
+++ b/workspaces/base/tsconfig.esm.json
@@ -2,7 +2,7 @@
   "extends": "../../.config/ts/tsconfig.esm.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib/es"
+    "outDir": "lib"
   },
   "include": ["src"],
   "exclude": ["src/**/__tests__"]
