--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
-    "@changesets/cli": "2.17.0",
+    "@changesets/cli": "2.26.2",
     "@svgr/cli": "4.1.0",
     "@svgr/plugin-jsx": "4.1.0",
     "@types/jest": "28.1.3",
@@ -77,11 +77,11 @@
     "barrelsby": "2.2.0",
     "chokidar-cli": "3.0.0",
     "commander": "4.0.1",
-    "concurrently": "4.1.2",
-    "cpy-cli": "^4.1.0",
+    "concurrently": "8.2.0",
+    "cpy-cli": "5.0.0",
     "eslint": "7.18.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.2",
+    "eslint-plugin-import": "2.28.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.30.0",
     "husky": "3.0.4",
