--- a/docs/package.json
+++ b/docs/package.json
@@ -2,9 +2,11 @@
   "name": "docs",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:types": "npx ts-node --esm app/utils/buildExamplesType.ts",
+    "build": "pnpm run build:types && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   }
