--- a/docs/package.json
+++ b/docs/package.json
@@ -21,12 +21,12 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.6",
-    "zod": "^3.21.4"
+    "typescript": "5.1.6"
   }
 }
