--- a/next-docs/package.json
+++ b/next-docs/package.json
@@ -34,46 +34,45 @@
     "@heathmont/moon-themes-tw": "workspace:^10.4.0",
     "@heathmont/moon-utils": "workspace:^10.4.0",
     "@heathmont/moon-icons-tw": "9.28.4",
-    "@hookform/resolvers": "^3.1.0",
-    "@jest/globals": "27.4.6",
-    "@next/bundle-analyzer": "^13.0.1",
-    "@octokit/core": "3.5.1",
-    "@testing-library/jest-dom": "5.16.5",
+    "@hookform/resolvers": "3.2.0",
+    "@jest/globals": "27.5.1",
+    "@next/bundle-analyzer": "13.4.13",
+    "@octokit/core": "3.6.0",
+    "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "14.0.0",
-    "@types/react": "18.0.28",
-    "@types/react-copy-to-clipboard": "5.0.2",
-    "@types/styled-components": "5.1.25",
-    "autoprefixer": "10.4.7",
-    "babel-jest": "27.4.6",
-    "framer-motion": "10.12.12",
+    "@types/react": "18.2.19",
+    "@types/react-copy-to-clipboard": "5.0.4",
+    "@types/styled-components": "5.1.26",
+    "autoprefixer": "10.4.14",
+    "babel-jest": "27.5.1",
+    "framer-motion": "10.15.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.4.7",
-    "jest-environment-jsdom": "27.4.6",
+    "jest": "27.5.1",
+    "jest-environment-jsdom": "27.5.1",
     "lodash": "4.17.21",
-    "next": "13.1.6",
+    "next": "13.4.13",
     "parse-link-header": "2.0.0",
-    "postcss": "8.4.14",
+    "postcss": "8.4.27",
     "react": "18.2.0",
-    "react-copy-to-clipboard": "5.0.4",
+    "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "7.45.4",
     "react-syntax-highlighter": "15.5.0",
-    "react-test-renderer": "18.0.0",
-    "sharp": "0.30.6",
-    "styled-components": "5.3.5",
-    "swr": "1.0.1",
-    "tailwindcss": "3.3.2",
-    "tailwindcss-rtl": "0.9.0",
+    "react-test-renderer": "18.2.0",
+    "sharp": "0.32.4",
+    "styled-components": "5.3.11",
+    "swr": "1.3.0",
+    "tailwindcss": "3.3.3",
     "typescript": "4.9.5",
-    "zod": "^3.21.4"
+    "zod": "3.21.4"
   },
   "devDependencies": {
-    "@svgr/core": "6.2.1",
-    "@svgr/plugin-jsx": "6.2.1",
-    "@svgr/plugin-prettier": "6.1.2",
-    "@types/lodash": "^4.14.182",
-    "@types/react-syntax-highlighter": "15.5.6",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "snapshot-diff": "0.9.0"
+    "@svgr/core": "6.5.1",
+    "@svgr/plugin-jsx": "6.5.1",
+    "@svgr/plugin-prettier": "6.5.1",
+    "@types/lodash": "4.14.196",
+    "@types/react-syntax-highlighter": "15.5.7",
+    "duplicate-package-checker-webpack-plugin": "3.0.0",
+    "snapshot-diff": "0.10.0"
   }
 }
