--- a/workspaces/cmdk/package.json
+++ b/workspaces/cmdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@heathmont/moon-core-tw",
+  "name": "@heathmont/moon-cmdk-tw",
   "sideEffects": false,
   "version": "10.5.0",
   "files": [
@@ -21,13 +21,8 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.16",
-    "@popperjs/core": "2.11.8",
-    "@radix-ui/react-accordion": "1.1.2",
-    "@radix-ui/react-toast": "1.1.4",
-    "@radix-ui/react-tooltip": "1.0.6",
-    "react-popper": "2.3.0",
-    "scroll-into-view-if-needed": "2.2.31",
-    "smooth-scroll-into-view-if-needed": "1.1.33",
+    "@heathmont/moon-core-tw": "workspace:^10.5.0",
+    "cmdk": "0.2.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-radix": "2.8.0"
   },
