--- a/package.json
+++ b/package.json
@@ -98,27 +98,35 @@
     "typescript": "5.1.6",
     "typescript-plugin-css-modules": "5.0.1"
   },
-  "resolutions": {
-    "@headlessui/react": "1.7.16",
-    "@radix-ui/react-collection": "1.0.3",
-    "@radix-ui/react-dismissable-layer": "1.0.4",
-    "@radix-ui/react-portal": "1.0.3",
-    "@radix-ui/react-primitive": "1.0.3",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-use-escape-keydown": "1.0.3",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "date-fns": "2.30.0",
-    "fast-equals": "4.0.3",
-    "polished": "4.2.2",
-    "prismjs": "1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-is": "18.2.0",
-    "react-remove-scroll": "2.5.6",
-    "react-table": "7.8.0",
-    "react-transition-group": "4.4.5",
-    "scroll-into-view-if-needed": "2.2.31"
+  "pnpm": {
+    "overrides": {
+      "@emotion/unitless": "0.8.0",
+      "@radix-ui/primitive": "1.0.1",
+      "@radix-ui/react-compose-refs": "1.0.1",
+      "@radix-ui/react-context": "1.0.1",
+      "@radix-ui/react-dismissable-layer": "1.0.4",
+      "@radix-ui/react-id": "1.0.1",
+      "@radix-ui/react-portal": "1.0.3",
+      "@radix-ui/react-presence": "1.0.1",
+      "@radix-ui/react-primitive": "1.0.3",
+      "@radix-ui/react-slot": "1.0.2",
+      "@radix-ui/react-use-callback-ref": "1.0.1",
+      "@radix-ui/react-use-controllable-state": "1.0.1",
+      "@radix-ui/react-use-escape-keydown": "1.0.3",
+      "@radix-ui/react-use-layout-effect": "1.0.1",
+      "date-fns": "2.28.0",
+      "dom-helpers": "5.2.1",
+      "polished": "4.1.4",
+      "prismjs": "1.29.0",
+      "react-is": "18.2.0",
+      "react-table": "7.8.0",
+      "react-transition-group": "4.4.1",
+      "react-remove-scroll": "2.5.6",
+      "scroll-into-view-if-needed": "2.2.31",
+      "smooth-scroll-into-view-if-needed": "1.1.33",
+      "styled-components": "5.3.11",
+      "tslib": "2.6.1"
+    }
   },
   "dependencies": {
     "@tanstack/react-table": "8.9.3"
