--- a/docs/package.json
+++ b/docs/package.json
@@ -2,14 +2,17 @@
   "name": "docs",
   "version": "10.7.6",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:types": "npx ts-node --esm app/utils/buildExamplesType.ts",
+    "build": "pnpm run build:types && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heathmont/moon-base-tw": "workspace:^10.7.6",
+    "@heathmont/moon-cmdk-tw": "workspace:^10.7.6",
     "@heathmont/moon-core-tw": "workspace:^10.7.6",
     "@heathmont/moon-icons-tw": "9.28.4",
     "@types/node": "20.4.9",
@@ -19,10 +22,12 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
 }
