--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     "@heathmont/moon-base-tw": "workspace:^10.9.1",
     "@heathmont/moon-cmdk-tw": "workspace:^10.9.1",
     "@heathmont/moon-core-tw": "workspace:^10.9.1",
+    "@heathmont/moon-themes-tw": "workspace:^10.9.1",
     "@heathmont/moon-icons-tw": "9.28.6",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
