--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     }
   },
   "dependencies": {
-    "@tanstack/react-table": "8.9.3"
+    "@tanstack/react-table": "8.9.3",
+    "ts-node": "^10.9.1"
   }
 }
