--- a/next-docs/package.json
+++ b/next-docs/package.json
@@ -48,6 +48,7 @@
     "babel-jest": "27.5.1",
     "framer-motion": "10.15.1",
     "identity-obj-proxy": "3.0.0",
+    "isomorphic-dompurify": "1.9.0",
     "jest": "27.5.1",
     "jest-environment-jsdom": "27.5.1",
     "lodash": "4.17.21",
