--- a/package.json
+++ b/package.json
@@ -132,5 +132,6 @@
   "dependencies": {
     "@tanstack/react-table": "8.9.3",
     "ts-node": "^10.9.1"
-  }
+  },
+  "packageManager": "pnpm@8.2.0"
 }
