--- a/next-docs/package.json
+++ b/next-docs/package.json
@@ -2,7 +2,7 @@
   "name": "next-docs",
   "version": "10.13.8",
   "private": true,
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
