--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -10,7 +10,7 @@
   "typings": "lib/index.d.ts",
   "repository": "https://github.com/coingaming/moon-design",
   "author": "Yolo Group",
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "scripts": {
     "prepublishOnly": "pnpm run publish:pre:move:lib && pnpm run publish:pre:update:package",
     "postpublish": "pnpm run publish:post:unmove:lib && pnpm run publish:post:revert:package",
